# pyGenieScript

./: .gitignore  LICENSE  README.md  genienlp-apple-silicone.md  package-lock.json  pyproject.toml  setup.py
.github/workflows/: docs.yml  pytest.yml
pyGenieScript/: __init__.py  geniescript.py  package.json
pyGenieScript/tests/: test_setup.py
src/pyGenieScript/: geniescript.py
