[build-system]
requires = ["setuptools>=61.0", "wheel", "npm"]

[project]
name = "pyGenieScript"
version = "0.0.0a1"
authors = [
  { name="Shicheng Liu", email="shicheng@cs.stanford.edu" },
]
description = "A packaged GenieScript in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "huggingface-hub>=0.12.0"
]

[project.urls]
"Homepage" = "https://github.com/stanford-oval/pyGenieScript.git"